## Process this file with automake to produce Makefile.in

AM_CPPFLAGS = -I$(srcdir)/../lib
bin_PROGRAMS = lenmus
lenmus_SOURCES = \
       $(pkgdir)/agg/font_freetype/agg_font_freetype.cpp \
       $(pkgdir)/agg/src/agg_curves.cpp \
       $(pkgdir)/agg/src/agg_trans_affine.cpp \
       $(pkgdir)/wxMidi/src/wxMidi.cpp \
       $(pkgdir)/wxMidi/src/wxMidiDatabase.cpp \
       $(srcdir)/app/AboutDialog.cpp \
       $(srcdir)/app/ArtProvider.cpp \
       $(srcdir)/app/DlgDebug.cpp \
       $(srcdir)/app/DlgDebugTrace.cpp \
       $(srcdir)/app/DlgPatternEditor.cpp \
       $(srcdir)/app/EditFrame.cpp \
       $(srcdir)/app/ErrorDlg.cpp \
       $(srcdir)/app/FontManager.cpp \
       $(srcdir)/app/KbdCmdParser.cpp \
       $(srcdir)/app/LangChoiceDlg.cpp \
       $(srcdir)/app/Logger.cpp \
       $(srcdir)/app/MainFrame.cpp \
       $(srcdir)/app/MidiWizard.cpp \
       $(srcdir)/app/Paper.cpp \
       $(srcdir)/app/Preferences.cpp \
       $(srcdir)/app/Printout.cpp \
       $(srcdir)/app/ScoreCanvas.cpp \
       $(srcdir)/app/ScoreCommand.cpp \
       $(srcdir)/app/ScoreDoc.cpp \
       $(srcdir)/app/ScoreView.cpp \
       $(srcdir)/app/ScoreWizard.cpp \
       $(srcdir)/app/SplashFrame.cpp \
       $(srcdir)/app/StatusBar.cpp \
       $(srcdir)/app/TheApp.cpp \
       $(srcdir)/app/WelcomeWnd.cpp \
       $(srcdir)/app/toolbox/ColorScheme.cpp \
       $(srcdir)/app/toolbox/ToolBarlines.cpp \
       $(srcdir)/app/toolbox/ToolBoxEvents.cpp \
       $(srcdir)/app/toolbox/ToolClef.cpp \
       $(srcdir)/app/toolbox/ToolGroup.cpp \
       $(srcdir)/app/toolbox/ToolNotes.cpp \
       $(srcdir)/app/toolbox/ToolPage.cpp \
       $(srcdir)/app/toolbox/ToolsBox.cpp \
       $(srcdir)/auxmusic/Cadence.cpp \
       $(srcdir)/auxmusic/ChordManager.cpp \
       $(srcdir)/auxmusic/Composer.cpp \
       $(srcdir)/auxmusic/ComposerV6.cpp \
       $(srcdir)/auxmusic/Conversion.cpp \
       $(srcdir)/auxmusic/Interval.cpp \
       $(srcdir)/auxmusic/ScalesManager.cpp \
       $(srcdir)/exercises/CadencesConstrains.cpp \
       $(srcdir)/exercises/ChordConstrains.cpp \
       $(srcdir)/exercises/Constrains.cpp \
       $(srcdir)/exercises/EarCompareIntvCtrol.cpp \
       $(srcdir)/exercises/EarIntervalsCtrol.cpp \
       $(srcdir)/exercises/EarIntvalConstrains.cpp \
       $(srcdir)/exercises/EarTunningCtrol.cpp \
       $(srcdir)/exercises/ExerciseCtrol.cpp \
       $(srcdir)/exercises/Generators.cpp \
       $(srcdir)/exercises/HarmonyConstrains.cpp \
       $(srcdir)/exercises/IdfyCadencesCtrol.cpp \
       $(srcdir)/exercises/IdfyChordCtrol.cpp \
       $(srcdir)/exercises/IdfyScalesCtrol.cpp \
       $(srcdir)/exercises/MusicReadingConstrains.cpp \
       $(srcdir)/exercises/ScalesConstrains.cpp \
       $(srcdir)/exercises/ScoreConstrains.cpp \
       $(srcdir)/exercises/ScoreCtrol.cpp \
       $(srcdir)/exercises/TheoHarmonyCtrol.cpp \
       $(srcdir)/exercises/TheoIntervalsConstrains.cpp \
       $(srcdir)/exercises/TheoIntervalsCtrol.cpp \
       $(srcdir)/exercises/TheoKeySignConstrains.cpp \
       $(srcdir)/exercises/TheoKeySignCtrol.cpp \
       $(srcdir)/exercises/TheoMusicReadingCtrol.cpp \
       $(srcdir)/exercises/auxctrols/CountersAuxCtrol.cpp \
       $(srcdir)/exercises/auxctrols/ScoreAuxCtrol.cpp \
       $(srcdir)/exercises/auxctrols/UrlAuxCtrol.cpp \
       $(srcdir)/exercises/dialogs/DlgCfgEarIntervals.cpp \
       $(srcdir)/exercises/dialogs/DlgCfgIdfyCadence.cpp \
       $(srcdir)/exercises/dialogs/DlgCfgIdfyChord.cpp \
       $(srcdir)/exercises/dialogs/DlgCfgIdfyScale.cpp \
       $(srcdir)/exercises/dialogs/DlgCfgScoreReading.cpp \
       $(srcdir)/exercises/dialogs/DlgCfgTheoIntervals.cpp \
       $(srcdir)/globals/Colors.cpp \
       $(srcdir)/globals/Paths.cpp \
       $(srcdir)/graphic/AggDrawer.cpp \
       $(srcdir)/graphic/BoxPage.cpp \
       $(srcdir)/graphic/BoxScore.cpp \
       $(srcdir)/graphic/BoxSlice.cpp \
       $(srcdir)/graphic/BoxSliceInstr.cpp \
       $(srcdir)/graphic/BoxSliceVStaff.cpp \
       $(srcdir)/graphic/BoxSystem.cpp \
       $(srcdir)/graphic/Drawer.cpp \
       $(srcdir)/graphic/Formatter4.cpp \
       $(srcdir)/graphic/GMObject.cpp \
       $(srcdir)/graphic/GraphicManager.cpp \
       $(srcdir)/graphic/Handlers.cpp \
       $(srcdir)/graphic/ShapeArch.cpp \
       $(srcdir)/graphic/ShapeBarline.cpp \
       $(srcdir)/graphic/ShapeBeam.cpp \
       $(srcdir)/graphic/ShapeBracket.cpp \
       $(srcdir)/graphic/ShapeNote.cpp \
       $(srcdir)/graphic/ShapeRest.cpp \
       $(srcdir)/graphic/ShapeStaff.cpp \
       $(srcdir)/graphic/ShapeText.cpp \
       $(srcdir)/graphic/ShapeTuplet.cpp \
       $(srcdir)/graphic/Shapes.cpp \
       $(srcdir)/graphic/TimeposTable.cpp \
       $(srcdir)/html/BookContentsBox.cpp \
       $(srcdir)/html/BookData.cpp \
       $(srcdir)/html/ContentsBoxCtrol.cpp \
       $(srcdir)/html/HelpController.cpp \
       $(srcdir)/html/HtmlWindow.cpp \
       $(srcdir)/html/ObjectParams.cpp \
       $(srcdir)/html/ParamsParser.cpp \
       $(srcdir)/html/Tags.cpp \
       $(srcdir)/html/TextBookController.cpp \
       $(srcdir)/html/TextBookFrame.cpp \
       $(srcdir)/ldp_parser/AuxString.cpp \
       $(srcdir)/ldp_parser/LDPNode.cpp \
       $(srcdir)/ldp_parser/LDPParser.cpp \
       $(srcdir)/ldp_parser/LDPTags.cpp \
       $(srcdir)/ldp_parser/LDPToken.cpp \
       $(srcdir)/mdi/ChildFrame.cpp \
       $(srcdir)/mdi/ClientWindow.cpp \
       $(srcdir)/mdi/DocViewMDI.cpp \
       $(srcdir)/mdi/ParentFrame.cpp \
       $(srcdir)/options/ColorsOptPanel.cpp \
       $(srcdir)/options/InternetOptPanel.cpp \
       $(srcdir)/options/LangOptionsPanel.cpp \
       $(srcdir)/options/Languages.cpp \
       $(srcdir)/options/OptionsDlg.cpp \
       $(srcdir)/options/OtherOptionsPanel.cpp \
       $(srcdir)/options/ToobarsOptPanel.cpp \
       $(srcdir)/score/Accidental.cpp \
       $(srcdir)/score/AuxObj.cpp \
       $(srcdir)/score/Barline.cpp \
       $(srcdir)/score/Beam.cpp \
       $(srcdir)/score/Chord.cpp \
       $(srcdir)/score/Clef.cpp \
       $(srcdir)/score/ColStaffObjs.cpp \
       $(srcdir)/score/Context.cpp \
       $(srcdir)/score/EditCmd.cpp \
       $(srcdir)/score/Glyph.cpp \
       $(srcdir)/score/InstrGroup.cpp \
       $(srcdir)/score/Instrument.cpp \
       $(srcdir)/score/KeySignature.cpp \
       $(srcdir)/score/MetronomeMark.cpp \
       $(srcdir)/score/Notation.cpp \
       $(srcdir)/score/Note.cpp \
       $(srcdir)/score/NoteRest.cpp \
       $(srcdir)/score/ObjOptions.cpp \
       $(srcdir)/score/Pitch.cpp \
       $(srcdir)/score/Rest.cpp \
       $(srcdir)/score/SOControl.cpp \
       $(srcdir)/score/Score.cpp \
       $(srcdir)/score/Slur.cpp \
       $(srcdir)/score/Staff.cpp \
       $(srcdir)/score/StaffObj.cpp \
       $(srcdir)/score/StaffObjIterator.cpp \
       $(srcdir)/score/Text.cpp \
       $(srcdir)/score/TimeSignature.cpp \
       $(srcdir)/score/TupletBracket.cpp \
       $(srcdir)/score/UndoRedo.cpp \
       $(srcdir)/score/VStaff.cpp \
       $(srcdir)/score/defs.cpp \
       $(srcdir)/score/properties/DlgProperties.cpp \
       $(srcdir)/score/properties/DlgTextStyles.cpp \
       $(srcdir)/score/properties/GeneralProperties.cpp \
       $(srcdir)/score/properties/TextProperties.cpp \
       $(srcdir)/sound/Metronome.cpp \
       $(srcdir)/sound/MidiManager.cpp \
       $(srcdir)/sound/SoundEvents.cpp \
       $(srcdir)/sound/SoundManager.cpp \
       $(srcdir)/sound/WaveManager.cpp \
       $(srcdir)/updater/Updater.cpp \
       $(srcdir)/updater/UpdaterDlg.cpp \
       $(srcdir)/widgets/Button.cpp \
       $(srcdir)/widgets/Caret.cpp \
       $(srcdir)/widgets/MsgBox.cpp \
       $(srcdir)/widgets/Ruler.cpp \
       $(srcdir)/widgets/Wizard.cpp \
       $(srcdir)/xml_parser/MusicXMLParser.cpp \
       $(srcdir)/xml_parser/XMLParser.cpp

CXXFLAGS = -g -D_DEBUG -D__WXGTK__ -D__WXDEBUG__ -D_UNICODE

INCLUDES = -I$(pkgdir)/agg/include \
		   -I$(pkgdir)/wxMidi/include \
		   -I$(pkgdir)/freetype/include \
		   -I$(pkgdir)/freetype/include/freetype2 \
		   -I$(pkgdir)/agg/font_freetype

LDADD = /usr/lib/libportmidi.so.0 \
        /usr/lib/libporttime.so.0 \
        /usr/lib/libfreetype.so


