#Makefile src

INCLUDES = 	-I@srcdir@/../packages/wxMidi/include \
		-I@srcdir@/../packages/agg/include \
		-I@srcdir@/../packages/wxXml2 \
		-I@srcdir@/../packages/agg/font_freetype \
		-I@srcdir@/../packages/freetype/include \
		-I@srcdir@/../packages/freetype/include/freetype2 \
		-I@srcdir@/../packages/wxSQLite3/include

lenmusprgdir=../z_gtk_debug
lenmusprg_PROGRAMS=lenmus
lenmus_SOURCES= ../packages/agg/src/agg_curves.cpp \
	../packages/agg/font_freetype/agg_font_freetype.cpp \
	../packages/agg/src/agg_trans_affine.cpp \
	../packages/wxMidi/src/wxMidi.cpp \
	../packages/wxMidi/include/wxMidi.h \
	../packages/wxMidi/src/wxMidiDatabase.cpp \
	../packages/wxSQLite3/src/wxsqlite3.cpp \
	app/AboutDialog.cpp \
	app/ArtProvider.cpp \
	app/DlgDebug.cpp \
	app/DlgDebugTrace.cpp \
	app/DlgPatternEditor.cpp \
	app/EditFrame.cpp \
	app/ErrorDlg.cpp \
	app/FontManager.cpp \
	app/KbdCmdParser.cpp \
	app/LangChoiceDlg.cpp \
	app/Logger.cpp \
	app/MainFrame.cpp \
	app/MidiWizard.cpp \
	app/Paper.cpp \
	app/Preferences.cpp \
	app/Printout.cpp \
	app/Processor.cpp \
	app/ScoreCanvas.cpp \
	app/ScoreCommand.cpp \
	app/ScoreDoc.cpp \
	app/ScoreView.cpp \
	app/ScoreWizard.cpp \
	app/SplashFrame.cpp \
	app/StatusBar.cpp \
	app/TheApp.cpp \
	app/toolbox/ColorScheme.cpp \
	app/toolbox/ToolBarlines.cpp \
	app/toolbox/ToolBoxEvents.cpp \
	app/toolbox/ToolClef.cpp \
	app/toolbox/ToolGroup.cpp \
	app/toolbox/ToolNotes.cpp \
	app/toolbox/ToolPage.cpp \
	app/toolbox/ToolsBox.cpp \
	app/WelcomeWnd.cpp \
	auxmusic/Cadence.cpp \
	auxmusic/ChordManager.cpp \
	auxmusic/Composer.cpp \
	auxmusic/ComposerV6.cpp \
	auxmusic/Conversion.cpp \
	auxmusic/Interval.cpp \
	auxmusic/ScalesManager.cpp \
	exercises/auxctrols/CountersAuxCtrol.cpp \
	exercises/auxctrols/ScoreAuxCtrol.cpp \
	exercises/auxctrols/UrlAuxCtrol.cpp \
	exercises/CadencesConstrains.cpp \
	exercises/ChordConstrains.cpp \
	exercises/Constrains.cpp \
	exercises/dialogs/DlgCfgEarIntervals.cpp \
	exercises/dialogs/DlgCfgIdfyCadence.cpp \
	exercises/dialogs/DlgCfgIdfyChord.cpp \
	exercises/dialogs/DlgCfgIdfyScale.cpp \
	exercises/dialogs/DlgCfgScoreReading.cpp \
	exercises/dialogs/DlgCfgTheoIntervals.cpp \
	exercises/EarCompareIntvCtrol.cpp \
	exercises/EarIntervalsCtrol.cpp \
	exercises/EarIntvalConstrains.cpp \
	exercises/EarTunningCtrol.cpp \
	exercises/ExerciseCtrol.cpp \
	exercises/Generators.cpp \
	exercises/HarmonyConstrains.cpp \
	exercises/IdfyCadencesCtrol.cpp \
	exercises/IdfyChordCtrol.cpp \
	exercises/IdfyScalesCtrol.cpp \
	exercises/MusicReadingConstrains.cpp \
	exercises/ScalesConstrains.cpp \
	exercises/ScoreConstrains.cpp \
	exercises/ScoreCtrol.cpp \
	exercises/TheoHarmonyCtrol.cpp \
	exercises/TheoIntervalsConstrains.cpp \
	exercises/TheoIntervalsCtrol.cpp \
	exercises/TheoKeySignConstrains.cpp \
	exercises/TheoKeySignCtrol.cpp \
	exercises/TheoMusicReadingCtrol.cpp \
	globals/Colors.cpp \
	globals/Paths.cpp \
	graphic/AggDrawer.cpp \
	graphic/BoxPage.cpp \
	graphic/BoxScore.cpp \
	graphic/BoxSlice.cpp \
	graphic/BoxSliceInstr.cpp \
	graphic/BoxSliceVStaff.cpp \
	graphic/BoxSystem.cpp \
	graphic/Drawer.cpp \
	graphic/Formatter4.cpp \
	graphic/GMObject.cpp \
	graphic/GraphicManager.cpp \
	graphic/Handlers.cpp \
	graphic/ShapeArch.cpp \
	graphic/ShapeBarline.cpp \
	graphic/ShapeBeam.cpp \
	graphic/ShapeBracket.cpp \
	graphic/ShapeLine.cpp \
	graphic/ShapeNote.cpp \
	graphic/ShapeRest.cpp \
	graphic/Shapes.cpp \
	graphic/ShapeStaff.cpp \
	graphic/ShapeText.cpp \
	graphic/ShapeTuplet.cpp \
	graphic/TimeposTable.cpp \
	html/BookContentsBox.cpp \
	html/BookData.cpp \
	html/ContentsBoxCtrol.cpp \
	html/HelpController.cpp \
	html/HtmlWindow.cpp \
	html/ObjectParams.cpp \
	html/ParamsParser.cpp \
	html/Tags.cpp \
	html/TextBookController.cpp \
	html/TextBookFrame.cpp \
	ldp_parser/AuxString.cpp \
	ldp_parser/LDPNode.cpp \
	ldp_parser/LDPParser.cpp \
	ldp_parser/LDPToken.cpp \
	mdi/ChildFrame.cpp \
	mdi/ClientWindow.cpp \
	mdi/DocViewMDI.cpp \
	mdi/ParentFrame.cpp \
	options/ColorsOptPanel.cpp \
	options/InternetOptPanel.cpp \
	options/LangOptionsPanel.cpp \
	options/Languages.cpp \
	options/OptionsDlg.cpp \
	options/OtherOptionsPanel.cpp \
	options/ToobarsOptPanel.cpp \
	score/Accidental.cpp \
	score/AuxObj.cpp \
	score/Barline.cpp \
	score/Beam.cpp \
	score/Chord.cpp \
	score/Clef.cpp \
	score/ColStaffObjs.cpp \
	score/Context.cpp \
	score/defs.cpp \
	score/EditCmd.cpp \
	score/Glyph.cpp \
	score/InstrGroup.cpp \
	score/Instrument.cpp \
	score/KeySignature.cpp \
	score/MetronomeMark.cpp \
	score/Notation.cpp \
	score/Note.cpp \
	score/NoteRest.cpp \
	score/ObjOptions.cpp \
	score/Pitch.cpp \
	score/properties/DlgProperties.cpp \
	score/properties/DlgTextStyles.cpp \
	score/properties/GeneralProperties.cpp \
	score/properties/TextProperties.cpp \
	score/Rest.cpp \
	score/Score.cpp \
	score/Slur.cpp \
	score/SOControl.cpp \
	score/Staff.cpp \
	score/StaffObj.cpp \
	score/StaffObjIterator.cpp \
	score/Text.cpp \
	score/TimeSignature.cpp \
	score/TupletBracket.cpp \
	score/UndoRedo.cpp \
	score/VStaff.cpp \
	sound/Metronome.cpp \
	sound/MidiManager.cpp \
	sound/SoundEvents.cpp \
	sound/SoundManager.cpp \
	sound/WaveManager.cpp \
	updater/Updater.cpp \
	updater/UpdaterDlg.cpp \
	widgets/Button.cpp \
	widgets/Caret.cpp \
	widgets/MsgBox.cpp \
	widgets/Ruler.cpp \
	widgets/Wizard.cpp \
	xml_parser/MusicXMLParser.cpp \
	xml_parser/XMLParser.cpp

# Removed. Produces a comiler error. cbp project file does not contains any reference to it.
#	score/properties/DlgEditText.cpp 
#	widgets/MusicSymbolList.cpp cd 


